Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/hip/h/gsthipmemory.h

#define GST_HIP_MEMORY_CAST(obj)          ((GstHipMemory *)obj)
#define GST_TYPE_HIP_ALLOCATOR            (gst_hip_allocator_get_type())
#define GST_HIP_ALLOCATOR(obj)            (G_TYPE_CHECK_INSTANCE_CAST((obj), GST_TYPE_HIP_ALLOCATOR, GstHipAllocator))
#define GST_HIP_ALLOCATOR_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST((klass), GST_TYPE_HIP_ALLOCATOR, GstHipAllocatorClass))
#define GST_IS_HIP_ALLOCATOR(obj)         (G_TYPE_CHECK_INSTANCE_TYPE((obj), GST_TYPE_HIP_ALLOCATOR))
#define GST_IS_HIP_ALLOCATOR_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE((klass), GST_TYPE_HIP_ALLOCATOR))
#define GST_HIP_ALLOCATOR_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS((obj), GST_TYPE_HIP_ALLOCATOR, GstHipAllocatorClass))
#define GST_HIP_ALLOCATOR_CAST(obj)       ((GstHipAllocator *)obj)
#define GST_TYPE_HIP_POOL_ALLOCATOR            (gst_hip_pool_allocator_get_type())
#define GST_HIP_POOL_ALLOCATOR(obj)            (G_TYPE_CHECK_INSTANCE_CAST((obj), GST_TYPE_HIP_POOL_ALLOCATOR, GstHipPoolAllocator))
#define GST_HIP_POOL_ALLOCATOR_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST((klass), GST_TYPE_HIP_POOL_ALLOCATOR, GstHipPoolAllocatorClass))
#define GST_IS_HIP_POOL_ALLOCATOR(obj)         (G_TYPE_CHECK_INSTANCE_TYPE((obj), GST_TYPE_HIP_POOL_ALLOCATOR))
#define GST_IS_HIP_POOL_ALLOCATOR_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE((klass), GST_TYPE_HIP_POOL_ALLOCATOR))
#define GST_HIP_POOL_ALLOCATOR_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS((obj), GST_TYPE_HIP_POOL_ALLOCATOR, GstHipPoolAllocatorClass))
#define GST_HIP_POOL_ALLOCATOR_CAST(obj)       ((GstHipPoolAllocator *)obj)
#define GST_HIP_MEMORY_NAME "HIPMemory"
#define GST_CAPS_FEATURE_MEMORY_HIP_MEMORY "memory:HIPMemory"
#define GST_MAP_HIP ((GstMapFlags) (GST_MAP_FLAG_LAST << 1))
#define GST_MAP_READ_HIP ((GstMapFlags) (GST_MAP_READ | GST_MAP_HIP))
#define GST_MAP_WRITE_HIP ((GstMapFlags) (GST_MAP_WRITE | GST_MAP_HIP))
typedef enum
{
  GST_HIP_MEMORY_TRANSFER_NEED_DOWNLOAD = (GST_MEMORY_FLAG_LAST << 0),
  GST_HIP_MEMORY_TRANSFER_NEED_UPLOAD = (GST_MEMORY_FLAG_LAST << 1)
} GstHipMemoryTransfer;
extern
gboolean  gst_is_hip_memory   (GstMemory * mem);
extern
gboolean  gst_hip_memory_get_texture (GstHipMemory * mem,
                                      guint plane,
                                      HIPfilter_mode filter_mode,
                                      HIPaddress_mode address_mode,
                                      hipTextureObject_t * texture);
extern
GstHipStream * gst_hip_memory_get_stream (GstHipMemory * mem);
extern
void           gst_hip_memory_set_event (GstHipMemory * mem,
                                         GstHipEvent * event);
extern
void           gst_hip_memory_sync (GstHipMemory * mem);
extern
GType       gst_hip_allocator_get_type (void);
extern
GstMemory * gst_hip_allocator_alloc (GstHipAllocator * allocator,
                                     GstHipDevice * device,
                                     const GstVideoInfo * info);
extern
gboolean    gst_hip_allocator_set_active (GstHipAllocator * allocator,
                                          gboolean active);
extern
GType                 gst_hip_pool_allocator_get_type (void);
extern
GstHipPoolAllocator * gst_hip_pool_allocator_new (GstHipDevice * device,
                                                   const GstVideoInfo * info);
extern
GstFlowReturn         gst_hip_pool_allocator_acquire_memory (GstHipPoolAllocator * allocator,
                                                               GstMemory ** memory);